fix: update Intuition client with corrected GraphQL schema - Fixed query syntax to match Intuition testnet API - Updated field names and nested object handling - Debugging GraphQL connection issues

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Intuition API Configuration
 NEXT_PUBLIC_INTUITION_API_URL=https://api.intuition.systems
-NEXT_PUBLIC_INTUITION_GRAPH_URL=https://graph.intuition.systems/graphql
+NEXT_PUBLIC_INTUITION_GRAPH_URL=https://testnet.intuition.sh/v1/graphql
 INTUITION_API_KEY=your_api_key_here
 
 # Intuition Mainnet Blockchain Configuration
