feat: migrate from testnet to mainnet endpoint- Updated GraphQL endpoint to https://mainnet.intuition.sh/v1/graphql- Changed all UI references from Testnet to Mainnet- Updated dashboard badge to green 'Mainnet Data'- Modified README with mainnet configuration- Verified mainnet endpoint returns valid data- MCP server ready for mainnet queries

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-# Intuition API Configuration (TESTNET)
+# Intuition API Configuration (MAINNET)
 NEXT_PUBLIC_INTUITION_API_URL=https://api.intuition.systems
-NEXT_PUBLIC_INTUITION_GRAPH_URL=https://testnet.intuition.sh/v1/graphql
+NEXT_PUBLIC_INTUITION_GRAPH_URL=https://mainnet.intuition.sh/v1/graphql
 INTUITION_API_KEY=your_api_key_here
 
 # Intuition Mainnet Blockchain Configuration
-# Note: GraphQL API queries testnet data, blockchain is on mainnet (Chain 1155)
+# Note: GraphQL API queries mainnet data, blockchain is on mainnet (Chain 1155)
 NEXT_PUBLIC_CHAIN_ID=1155
 NEXT_PUBLIC_RPC_URL=https://rpc.intuition.systems/http
 NEXT_PUBLIC_EXPLORER_URL=https://explorer.intuition.systems
